<resources>
    <string name="app_name">Battery Buddy</string>
    <string name="welcome">Battery Buddy Optimizer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="rank">Rank</string>
    <string name="charge">Charge</string>
    <string name="hometext">Home Fragment</string>
    <string name="rankText">Rank Fragment</string>
    <string name="chargetext">Charge Fragment</string>
    <string name="batterybuddy">Battery Buddy</string>
    <string name="problemText">PROBLEMS DETECTED</string>
    <string name="issuetext">30+ issues</string>
    <string name="availableText">Available:</string>
    <string name="hourText">12</string>
    <string name="batteryChargeLevel">50%</string>
    <string name="estimatedchargeText">Estimated time until Full charge</string>
    <string name="remainingHourText">1h 30 m</string>
    <string name="optimize">OPTIMIZE</string>
    <string name="brightnessPercentage">50%</string>
    <string name="soundText">Sound</string>
    <string name="bluetoothOffText">Off</string>
    <string name="lockscreenText">5min</string>
    <string name="batteryStatus">BATTERY STATUS</string>
    <string name="temperatureText">Temperature</string>
    <string name="technologyText">Technology</string>
    <string name="voltageText">Voltage</string>
    <string name="temperatureValue">35.9C</string>
    <string name="voltageValue">3.7 V</string>
    <string name="technologyValue">Li-poly</string>
    <string name="availableBatteryUsage">AVAILABLE BATTERY USAGE</string>
    <string name="voicecallText">Voice Call</string>
    <string name="voicecallValueText">0h 56min</string>
    <string name="watchingvideotext">Watching Videos</string>
    <string name="watchingvideoValueText">0h 40min</string>
    <string name="usingwifiText">Using WiFi</string>
    <string name="usingwifiValueText">0h 59min</string>
    <string name="packageNameText">Google Plus</string>
    <string name="powerconsumedValueText">44%</string>
    <string name="rankpowerText">Power</string>
    <string name="checkButton">Check</string>
    <string name="closeButton">CLOSE</string>
    <string name="hourSymbolText">H</string>
    <string name="minutesText">45</string>
    <string name="minutesSymbolText">MIN</string>
    <string name="bluetoothtitle">Bluetooth</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="lockScreenTimeouttitle">Automatically Lock</string>
    <string name="brightnesstitle">Brightness Level</string>
    <string name="zerobright">10%</string>
    <string name="onebright">20%</string>
    <string name="twobright">30%</string>
    <string name="threebright">40%</string>
    <string name="fourbright">50%</string>
    <string name="fivebright">60%</string>
    <string name="sixbright">70%</string>
    <string name="sevenbright">80%</string>
    <string name="eightbright">90%</string>
    <string name="ninebright">100%</string>
    <string name="autolock">0s</string>
    <string name="fivesecond">5s</string>
    <string name="fiveteensecond">15s</string>
    <string name="thirtysecond">30s</string>
    <string name="oneminute">1m</string>
    <string name="twominute">2m</string>
    <string name="fiveminute">5m</string>
    <string name="tenminute">10m</string>
    <string name="thirtyminute">30m</string>
    <string name="silentsound">Silent</string>
    <string name="soundvibrate">Vibrate</string>
    <string name="soundtitle">Sound Mode</string>
    <string name="ramtext">RAM</string>
    <string name="cputext">CPU</string>
    <string name="memorytext">SIZE</string>
    <string name="batterytext">Battery</string>
    <string name="systemDate">Date shows here</string>
    <string name="storagetext">Storage</string>
    <string name="storageSuffixtext">Storage</string>
    <string name="batteryLevelTextView">20%</string>
    <string name="optimized">Optimized Battery</string>
    <string name="Consumptionchecktext">Checking Power Consumption</string>
    <string name="estimatedextensiontext">Estimated Extension : </string>
    <string name="powerconsumingapptext">POWER CONSUMING APPS</string>
    <string name="extentedhours">0 H 40 Min</string>
    <string name="dummy_time_value">1 Hour 40 mins</string>
    <string name="optimalStateTextView">Optimal State</string>
    <string name="extentedTimeTextView">Extended Battery By : </string>
    <string name="extentedhoursAfter">Extended By : </string>
    <string name="powerconsumptionToolbar">Power Consumption</string>
    <string name="poweroptimization">Power Optimization</string>
    <string name="nav_about_us">About us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="uninstallButton">Uninstall</string>
    <string name="successful_optimization">Optimization Successful</string>
    <string name="no_battery_present">There is no battery</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="noproblemdetected">NO PROBLEMS DETECTED</string>
    <string name="analyzingdata">Completed Analyzing of</string>
    <string name="charging">Charging</string>
    <string name="percentage_symbol">%</string>
    <string name="discharging">Discharging</string>
    <string name="notification_title_optimize">Too Many Junk Apps</string>
    <string name="notification_description_optimize">Optimize battery draining apps </string>
    <string-array name="sreenlocktimer">
        <item>Immediately</item>
        <item>5 second </item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="brightness">

        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>

    </string-array>
    <string-array name="soundarray">
        <item>Silence</item>
        <item>Sound</item>
        <item>Vibrate</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="aboutUs">About Us</string>
    <string name="navfeedback">Feed back</string>
    <string name="nav_terms_policy"><![CDATA[Terms & Conditions]]></string>
    <string name="nav_share">Share</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="close_window_text">x</string>
    <string name="share_to">Share to</string>
    <string name="welcometext">Welcome to Battery Buddy</string>
    <string name="byusingtext">By using this application, you agree to Battery Buddy\'s</string>
    <string name="termsofservicetext">Terms of Service</string>
    <string name="andtext">and</string>
    <string name="privacynoticetext">Privacy Policy</string>
    <string name="acceptandcontinue"><![CDATA[ACCEPT & CONTINUE]]></string>
    <string name="privacy_policy_heading">Privacy Policy</string>
</resources>