<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/aboutUs" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/navfeedback" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_feedback"
            android:title="@string/privacy_policy_heading"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_share" />
    </group>



</menu>
