<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.receptix.batterybuddy.activities.TCActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/welcometext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:src="@drawable/bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/firsttv"
            android:text="@string/byusingtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingRight="4dp"
                android:textColor="@color/md_material_blue_600"
                android:id="@+id/secondtv"
                android:text="@string/termsofservicetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:paddingRight="4dp"
                android:id="@+id/thirdtv"
                android:text="@string/andtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/md_material_blue_600"
                android:id="@+id/fourthtv"
                android:text="@string/privacynoticetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>


    <Button
        android:textColor="@color/white"
        android:background="@color/md_material_blue_600"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:id="@+id/useragreeBtn"
        android:text="@string/acceptandcontinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
