<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgcolor"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="10dp">



    <ImageView
        android:id="@+id/spackageIconImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/googleplus32" />

    <TextView
        android:textColor="@color/white"
        android:id="@+id/spackageNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/spackageIconImageView"
        android:text="@string/packageNameText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/scheckbutton"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/white"
            android:id="@+id/spowerConsumedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerconsumedValueText" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rankpowerText" />


    </LinearLayout>

    <Button
        android:textColor="@color/white"
        android:layout_marginLeft="3dp"
        android:minHeight="32dp"
        android:background="@drawable/checkbuttonbgcolor"
        android:id="@+id/scheckbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/checkButton" />


</RelativeLayout>
