<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgcolor"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="5dp"
    android:paddingTop="10dp">


    <ImageView
        android:id="@+id/packageIconImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/googleplus32" />

    <TextView
        android:id="@+id/packageNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/packageIconImageView"
        android:ellipsize="end"
        android:ems="9"
        android:maxEms="9"
        android:maxLines="1"
        android:text="@string/packageNameText"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/checkbutton"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/powerConsumedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/powerconsumedValueText"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rankpowerText"
            android:textColor="@color/white" />


    </LinearLayout>

    <Button
        android:id="@+id/checkbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:background="@drawable/closebuttonbgcolor"
        android:minHeight="32dp"
        android:text="@string/uninstallButton"
        android:textColor="@color/white" />


</RelativeLayout>
