<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolormain"
    android:orientation="vertical"
    tools:context="com.receptix.batterybuddy.activities.AfterOptimizerActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/app_bar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundcolor"
        android:orientation="vertical"
        android:padding="@dimen/small_margin">

        <!-- SIMPLE IMAGE SHOWING SUCCESSFUL OPTIMIZATION -->
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/medium_margin"
            android:contentDescription="@string/successful_optimization"
            android:src="@drawable/prize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <!-- EXTENDED BY (static) -->
            <TextView
                style="@style/TextViewResultScreen"
                android:text="@string/extentedhoursAfter" />

            <!-- VALUE BY WHICH BATTERY TIME HAS BEEN EXTENDED -->
            <TextView
                android:id="@+id/extentedTextViewAfter"
                style="@style/TextViewResultScreen"
                android:text="@string/dummy_time_value"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>

    <com.inmobi.ads.InMobiBanner
        android:id="@+id/banner"
        ads:placementId="1494843277765"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/large_margin">

    </com.inmobi.ads.InMobiBanner>


</LinearLayout>





</RelativeLayout>