<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.inmobi.ads"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_lock_ads"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical"
        tools:context="com.receptix.batterybuddy.activities.LockAdsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/black"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <!-- BUTTON TO CLOSE LOCK SCREEN ACTIVITY -->
            <TextView
                android:id="@+id/close_lock_screen_popup"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="end"
                android:background="@color/bgcolormain"
                android:gravity="center"
                android:text="@string/close_window_text"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    />

                <TextView
                    android:id="@+id/textview_date"
                    style="@style/CustomBaseTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:textColor="@color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ProgressBar
                            android:id="@+id/lockProgressBar"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minHeight="50dp"
                            android:minWidth="140dp"
                            android:progress="40" />

                        <TextView
                            android:id="@+id/lockBatteryLevelTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:textColor="@color/white" />
                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="50">

                    <TextView
                        android:id="@+id/lockbatteryChargingStatusTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="chargeStatus"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:visibility="invisible" />
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.github.lzyzsd.circleprogress.ArcProgress
                        android:id="@+id/lockbatteryArcProgress"
                        style="@style/ArcProgressLayout"
                        app:arc_finished_color="@color/colorGreen"
                        app:arc_suffix_text_size="10dp"
                        app:arc_text_color="@color/white"
                        app:arc_text_size="24dp"
                        app:arc_unfinished_color="@color/white" />

                    <TextView
                        style="@style/CustomBaseTextView"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/batterytext"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.github.lzyzsd.circleprogress.ArcProgress
                        android:id="@+id/lockramArcProgress"
                        style="@style/ArcProgressLayout"
                        app:arc_finished_color="@color/colorGreen"
                        app:arc_suffix_text_size="10dp"
                        app:arc_text_color="@color/white"
                        app:arc_text_size="24dp"
                        app:arc_unfinished_color="@color/white" />

                    <TextView
                        style="@style/CustomBaseTextView"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/ramtext"
                        android:textColor="@color/white" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.github.lzyzsd.circleprogress.ArcProgress
                        android:id="@+id/lockCpuArcProgress"
                        style="@style/ArcProgressLayout"
                        app:arc_finished_color="@color/colorGreen"
                        app:arc_suffix_text_size="10dp"
                        app:arc_text_color="@color/white"
                        app:arc_text_size="24dp"
                        app:arc_unfinished_color="@color/white" />

                    <TextView
                        style="@style/CustomBaseTextView"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:text="@string/cpu_arc_text"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


        <TextView
            style="@style/CustomBaseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_text_size"
            android:textStyle="italic"
            android:visibility="gone"
            />


        <!-- InMobi Ad -->
        <com.inmobi.ads.InMobiBanner
            android:id="@+id/inmobi_banner"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            ads:placementId="1496930154754"
            />

    </LinearLayout>

</layout>